--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "NODE_ENV=development node artweapon",
-    "dev": "nodemon app",
+    "dev": "nodemon artweapon",
     "compile:sass": "node-sass sass/main.scss public/css/main.css -w"
   },
   "author": "pledovski",
