--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-fileupload": "^1.1.6",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.1.3",
+    "geoip-lite": "^1.4.7",
     "helmet": "^3.22.0",
     "hpp": "^0.2.3",
     "html-entities": "^1.3.3",
